Various bugs fixed for version 1
